# FinanceCore

./: .gitignore  check.ipynb  pyproject.toml
.github/workflows/: daily_ingestion.yml
data_store/: market.duckdb
fincore/: __init__.py
fincore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fincore/analytics/: benchmark.py  covariance.py  drawdown.py  returns.py  risk.py  robustness.py
fincore/analytics/regime/: breaks.py  correlation.py  trend.py  volatility.py
fincore/config/: settings.py
fincore/data/: assets.py  benchmark_prices.py  benchmarks.py  universe.py  yahoo.py
fincore/data/ingestion/: ingest_assets.py  ingest_benchmarks.py  ingest_prices.py
fincore/logging/: logger.py
fincore/portfolio/: attribution.py  backtest.py  base.py  constraints.py  costs.py  performance.py  rebalancer.py  turnover.py
fincore/portfolio/strategies/: equal_weight.py  min_variance.py  risk_parity.py
fincore/storage/: connection.py  repositories.py  schema.py
scripts/: validate_universe.py
